--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-nav></app-nav>
 
 <div class="container" style="margin-top: 100px">
-  <h1>{{title}}</h1>
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 </div>
 
